Show value of opening balance for investments

The current implementation did only show the number of shares which
needs to be multiplied by the price to gain the value.

BUG: 398982
FIXED-IN: 5.0.8